# Snake

./: CMakeLists.txt  README.md  main.cpp
scripts/: build.py
src/: CMakeLists.txt  glob.cpp  glob.h  player.cpp  player.h  world_grid.cpp  world_grid.h
